tests/rosetta/out/Zig/append-a-record-to-the-end-of-a-text-file.error
zig build: exit status 1
/tmp/append-a-record-to-the-end-of-a-text-file.zig:9:25: error: array literal requires address-of operator (&) to coerce to slice type '[]const []const u8'
